--- a/trunk/TjChemicalWeb/MasterPage/BackSys.master
+++ b/trunk/TjChemicalWeb/MasterPage/BackSys.master
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div>
-        <asp:ContentPlaceHolder id="phctnt_body" runat="server">
+        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
     </div>
